--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@t3-oss/env-core": "^0.13.6",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-router": "^1.120.16",
     "@tanstack/react-router-devtools": "^1.120.16",
@@ -21,7 +22,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.55"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
